--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.5.7",
+    "md5": "^2.2.1",
+    "mobx": "4.5.2",
+    "mobx-react": "^5.3.6",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
     "react-native-canvas": "^0.1.24",
-    "react-native-sensors": "^4.1.0"
+    "react-native-elements": "^0.19.1",
+    "react-native-sensors": "^4.1.0",
+    "react-native-vector-icons": "^6.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.1.2",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.49.0",
