--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "firebase": "^5.5.7",
     "md5": "^2.2.1",
     "mobx": "4.5.2",
     "mobx-react": "^5.3.6",
@@ -15,6 +14,7 @@
     "react-native": "0.57.4",
     "react-native-canvas": "^0.1.24",
     "react-native-elements": "^0.19.1",
+    "react-native-firebase": "^5.0.0",
     "react-native-sensors": "^4.1.0",
     "react-native-vector-icons": "^6.0.2"
   },
