--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,6 +101,7 @@ android {
         applicationId "com.inkcanvas"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         ndk {
@@ -137,9 +138,9 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-firebase')
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-sensors')
+    implementation project(':react-native-firebase')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-sensors')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
@@ -148,6 +149,7 @@ dependencies {
     implementation "com.google.firebase:firebase-core:16.0.3"
     implementation "com.google.firebase:firebase-auth:16.0.3"
     implementation "com.google.firebase:firebase-database:16.0.2"
+    implementation "com.google.firebase:firebase-firestore:17.1.0"
 }
 
 // Run this once to be able to run the application with BUCK
