--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "flow": "flow"
   },
   "dependencies": {
     "md5": "^2.2.1",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.1.2",
     "babel-jest": "23.6.0",
+    "flow-bin": "0.78.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.49.0",
     "react-test-renderer": "16.6.0-alpha.8af6728"
